- body 기본 폰트 변경한다. / lnb 모바일 추가한다.

--- a/css/reset.css
+++ b/css/reset.css
@@ -25,6 +25,10 @@ dd, del, details, dfn, dialog, div, dl, dt, em, embed, fieldset, figcaption, fig
 	letter-spacing: -0.05em;
 }
 
+input, button, select {
+	vertical-align: middle;
+}
+
 article, aside, details, figcaption, figure, footer, header, menu, nav, section {
 	display: block;
 }
