--- a/css/layout.css
+++ b/css/layout.css
@@ -21,7 +21,7 @@ input[type="radio"]:focus,
 input[type="checkbox"]:focus,
 input[type="text"]:focus,
 input[type="password"]:focus,
-button,
+button:hover,
 textarea:focus {
     outline: #ccc dashed 1px;
 }
@@ -42,7 +42,10 @@ body {
     margin: 0;
     background: #002144;
     color: white;
-    font-family: 'NanumGothic', '나눔고딕', '맑은 고딕', 'Malgun Gothic', '돋움', Dotum, Helvetica, AppleGothic, arial, sans-serif;
+    font-family: 'source-han-sans-korean', sans-serif;
+}
+select, input, button, textarea {
+    font-family: 'source-han-sans-korean', sans-serif;
 }
 a {
     text-decoration: none;
