--- a/css/responsive.css
+++ b/css/responsive.css
@@ -11,13 +11,33 @@
         width: 100%;
     }
 
-    .mobileGnb {
-        display: block;
-    }
     .gnb {
         display: none;
     }
-
+    .mobileGnb {
+        position: absolute;
+        right: 0;
+        top: 20px;
+        display: block;
+        width: 100%;
+        max-width: 350px;
+    }
+    .mobileGnb .lnbBtn a {
+        display: block;
+        width: 50px;
+        height: 50px;
+        text-indent: -9999px;
+        background: white;
+        float: right;
+    }
+    .mobileGnb .lnbBtn a:after {
+        border-top: 5px solid white;
+        border-bottom: 5px solid white;
+    }
+    .mobileGnb > ul {
+        margin-top: 50px;
+        display: none;
+    }
     .mobileGnb li a {
         display: block;
         padding: 10px;
@@ -30,6 +50,11 @@
     .mobileGnb > ul > li > a {
         background: #f05f5f;
         color: white;
+    }
+
+    h2 {
+        font-size: 3em;
+        line-height: 1.2em;
     }
 
 
