--- a/css/layout.css
+++ b/css/layout.css
@@ -70,6 +70,17 @@ a {
 }
 
 
+/* preloader */
+#preloader {
+    position: fixed;
+    z-index: 500;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: url(../images/ajax-loader.gif) center no-repeat #002144;
+}
+
 
 /* header */
 #headerMobile {
