- input 회원가입 폼 만든다 (기본 구조)

--- a/css/layout.css
+++ b/css/layout.css
@@ -21,7 +21,7 @@ input[type="radio"]:focus,
 input[type="checkbox"]:focus,
 input[type="text"]:focus,
 input[type="password"]:focus,
-button:hover,
+button:focus,
 textarea:focus {
     outline: #ccc dashed 1px;
 }
