--- a/css/reset.css
+++ b/css/reset.css
@@ -25,8 +25,14 @@ dd, del, details, dfn, dialog, div, dl, dt, em, embed, fieldset, figcaption, fig
 	letter-spacing: -0.05em;
 }
 
-input, button, select {
+input, button, select, textarea {
 	vertical-align: middle;
+	font-size: 1em;
+}
+
+button {
+	padding: 0;
+	border: 0 none;
 }
 
 article, aside, details, figcaption, figure, footer, header, menu, nav, section {
