--- a/css/ui.css
+++ b/css/ui.css
@@ -56,4 +56,46 @@
 }
 
 
+/* input */
+.signUpTable {
+    width: 100%;
+    color: white;
+}
+.signUpTable .textInput {
+    border: 1px solid white;
+    width: 100%;
+    height: 40px;
+    padding: 0 10px;
+    background: #002144;
+    color: white;
+}
+.signUpTable > tbody > tr > th,
+.signUpTable > tbody > tr > td {
+    padding: 10px;
+}
+.signUpTable > tbody > tr > th {
+    width: 20%;
+}
+.signUpTable > tbody > tr > td {
+    width: 80%;
+}
+.signUpTable .inputStructure td {
+    text-align: center;
+}
+.signUpTable .button {
+    width: 100%;
+}
+.button span {
+    display: block;
+    padding: 0 20px;
+    background: #f05f5f;
+    color: white;
+    text-align: center;
+    height: 40px;
+    line-height: 40px;
+}
+
+
+
+
 
