- 로그인 modal 만든다

--- a/css/style.css
+++ b/css/style.css
@@ -86,3 +86,36 @@ label {
     display: block;
     font-size: 1.6em;
 }
+
+.category {
+    margin-bottom: 20px;
+    overflow: hidden;
+}
+.category li {
+    font-size: 1.5em;
+    float: left;
+    margin-right: 15px;
+}
+.category li .button span {
+    height: 50px;
+    line-height: 50px;
+}
+
+
+.modal.login {
+    padding: 20px;
+    border: 2px solid black;
+    clear: both;
+}
+.modal.login td,
+.modal.login th {
+    padding-top: 20px;
+}
+.modal.login tr:first-child td,
+.modal.login tr:first-child th {
+    padding-top: 0;
+}
+.modal.login .loginBtn span {
+    line-height: 100px;
+    height: 100px;
+}
