- 띄어쓰기하고, active 클래스 추가한다.

--- a/css/ui.css
+++ b/css/ui.css
@@ -108,7 +108,7 @@
     display: block;
     padding: 0 3px;
 }
-.pagination li.current a {
+.pagination li.active a {
     color: #f05f5f;
     font-weight: bold;
 }
