- 메인 메뉴 호버, 탭 지원 추가한다.

--- a/css/layout.css
+++ b/css/layout.css
@@ -130,6 +130,9 @@ header nav.gnb li ul {
 header nav.gnb li li a {
     color: #002144;
 }
+header nav.gnb > ul > li.active ul {
+    display: block;
+}
 header nav.gnb a {
     display: block;
     padding: 10px;
