- 버튼 스타일 추가한다.

--- a/templatePC/css/elements.css
+++ b/templatePC/css/elements.css
@@ -94,6 +94,8 @@ input[type="radio"] {
     box-sizing: border-box;
     border: 1px solid #000000;
     text-align: center;
+    -webkit-appearance: none;
+    cursor: pointer;
 }
 .button.small {
     height: 34px;
