--- a/templatePC/css/elements.css
+++ b/templatePC/css/elements.css
@@ -39,6 +39,25 @@
 .unit10 {
     margin-bottom: 10px;
 }
+.unit0 {
+    margin-bottom: 0;
+}
+
+
+
+
+
+/* heading style */
+.heading24 {
+    font-size: 24px;
+    font-weight: normal;
+}
+.heading22 {
+    font-size: 22px;
+    font-weight: normal;
+}
+
+
 
 
 
