--- a/templateMobile/css/layout.css
+++ b/templateMobile/css/layout.css
@@ -34,20 +34,26 @@ input[type="radio"] {
 
 
 
-
+.sidemenu {
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+}
 .gnb {
     position: fixed;
     top: 50px;
     bottom: 0;
-    left: 0;
-    width: calc(100% - 50px);
-    background: #272d38;
+    left: -310px;
+    width: 310px;
     overflow: scroll;
-    -webkit-transition: all 1.3s;
-    -moz-transition: all 1.3s;
-    -ms-transition: all 1.3s;
-    -o-transition: all 1.3s;
-    transition: all 1.3s;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -ms-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
 }
 .gnb.open {
     -webkit-transform: translateX(250px);
