--- a/templateMobile/css/layout.css
+++ b/templateMobile/css/layout.css
@@ -7,6 +7,7 @@ body {
     font-size: 15px;
     line-height: 1.5;
     font-family: 'noto-sans', sans-serif;
+    z-index: 100; /* 낮은 버전 모바일 호환. sidemenu 클래스가 없어졌을 때, 컨텐츠가 사라진다 */
 }
 
 input, select, button, textarea {
